Fixed images not proprly shown on small devices

--- a/src/stylesheets/Card.module.css
+++ b/src/stylesheets/Card.module.css
@@ -12,7 +12,7 @@
 }
 
 .cover-image {
-  width: 350px;
+  width: auto;
 }
 
 .techstack-container {
